Implement ucode for Star Wars - Shadows of the Empire.

--- a/GLideN64.vcxproj
+++ b/GLideN64.vcxproj
@@ -250,6 +250,7 @@
     <ClCompile Include="CRC.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
     <ClCompile Include="F3DEX2CBFD.cpp" />
+    <ClCompile Include="F3DSWSE.cpp" />
     <ClCompile Include="FrameBuffer.cpp" />
     <ClCompile Include="GBI.cpp" />
     <ClCompile Include="gDP.cpp" />
@@ -342,6 +343,7 @@
     <ClInclude Include="Debug.h" />
     <ClInclude Include="DepthBuffer.h" />
     <ClInclude Include="F3DEX2CBFD.h" />
+    <ClInclude Include="F3DSWSE.h" />
     <ClInclude Include="FrameBuffer.h" />
     <ClInclude Include="GBI.h" />
     <ClInclude Include="gDP.h" />
