--- a/GLideNHQ/CMakeLists.txt
+++ b/GLideNHQ/CMakeLists.txt
@@ -28,7 +28,7 @@ find_package(Boost COMPONENTS thread filesystem system REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
 if(WIN32)
-  LINK_DIRECTORIES( lib )
+  LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/lib )
   add_definitions(
 	-DWIN32
 	-D_CRT_SECURE_NO_WARNINGS
@@ -68,20 +68,42 @@ SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS}" )
 SET(GCC_STATIC_LINK_FLAGS "-static-libgcc -static-libstdc++")
 SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_STATIC_LINK_FLAGS}" )
 
-add_library( GLideNHQ STATIC ${GLideNHQ_SOURCES})
+if( NOT GHQCHK )
+	add_library( GLideNHQ STATIC ${GLideNHQ_SOURCES})
 
-SET_TARGET_PROPERTIES(
-  GLideNHQ
-  PROPERTIES
-  LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
-  PREFIX ""
-  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin
-  )
+	SET_TARGET_PROPERTIES(
+	  GLideNHQ
+	  PROPERTIES
+	  LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
+	  PREFIX ""
+	  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin
+	  )
 
-if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-target_link_libraries(GLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} libpng zlib )
-endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
+	if( CMAKE_BUILD_TYPE STREQUAL "Debug")
+	target_link_libraries(GLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} libpng zlib dxtn )
+	endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-if( CMAKE_BUILD_TYPE STREQUAL "Release")
-target_link_libraries(GLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} libpngd zlibd )
-endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
+	if( CMAKE_BUILD_TYPE STREQUAL "Release")
+	target_link_libraries(GLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} libpng zlib dxtn )
+	endif( CMAKE_BUILD_TYPE STREQUAL "Release")
+else( NOT GHQCHK )
+	add_definitions(-DGHQCHK)
+
+	add_library( ghqchk SHARED ${GLideNHQ_SOURCES})
+
+	SET_TARGET_PROPERTIES(
+	  ghqchk
+	  PROPERTIES
+	  LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
+	  PREFIX ""
+	  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin
+	  )
+
+	if( CMAKE_BUILD_TYPE STREQUAL "Debug")
+	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} libpng zlib dxtn )
+	endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
+
+	if( CMAKE_BUILD_TYPE STREQUAL "Release")
+	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} libpng zlib dxtn )
+	endif( CMAKE_BUILD_TYPE STREQUAL "Release")
+endif( NOT GHQCHK )
