Remove texture compression support from texture library.

--- a/GLideNHQ/CMakeLists.txt
+++ b/GLideNHQ/CMakeLists.txt
@@ -85,11 +85,11 @@ if( NOT GHQCHK )
 	  )
 
 	if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-	target_link_libraries(libGLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z dxtn )
+	target_link_libraries(libGLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
 	endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 	if( CMAKE_BUILD_TYPE STREQUAL "Release")
-	target_link_libraries(libGLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z dxtn )
+	target_link_libraries(libGLideNHQ ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
 	endif( CMAKE_BUILD_TYPE STREQUAL "Release")
 else( NOT GHQCHK )
 	add_definitions(-DGHQCHK)
@@ -105,10 +105,10 @@ else( NOT GHQCHK )
 	  )
 
 	if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z dxtn )
+	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
 	endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 	if( CMAKE_BUILD_TYPE STREQUAL "Release")
-	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z dxtn )
+	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
 	endif( CMAKE_BUILD_TYPE STREQUAL "Release")
 endif( NOT GHQCHK )
