--- a/GLideNHQ/CMakeLists.txt
+++ b/GLideNHQ/CMakeLists.txt
@@ -27,13 +27,11 @@ set(Boost_USE_MULTITHREADED ON)
 find_package(Boost REQUIRED COMPONENTS thread filesystem system )
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
-add_definitions(-DBOOST_THREAD_USE_LIB)
 
 if(UNIX)
   add_definitions(
     -DNDEBUG
     -DOS_LINUX
-    -DBOOST_THREAD_POSIX
   )
 endif(UNIX)
 
@@ -45,11 +43,6 @@ if(WIN32)
 	-D_CRT_SECURE_NO_WARNINGS
   )
 endif(WIN32)
-
-if (WIN32 AND __COMPILER_GNU)
-   # mingw-gcc fails to link boost::thread
-   add_definitions(-DBOOST_THREAD_USE_LIB)
-endif (WIN32 AND __COMPILER_GNU)
 
 # Build type
 
@@ -78,68 +71,48 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 endif()
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-SET(GCC_CPP11_COMPILE_FLAGS "-std=c++0x")
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS} -static -fPIC " )
+    SET(GCC_CPP11_COMPILE_FLAGS "-std=c++0x")
+    if( NOT GHQCHK )
+      SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS} -static -fPIC " )
+    else( NOT GHQCHK )
+      SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS}" )
+    endif( NOT GHQCHK )
 #SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS} " )
 endif()
 
 if( NOT GHQCHK )
-        add_definitions( -DTXFILTER_LIB)
 
-        if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-        add_library( libGLideNHQd STATIC ${GLideNHQ_SOURCES})
+    add_definitions( -DTXFILTER_LIB)
 
-        SET_TARGET_PROPERTIES(
-          libGLideNHQd
-          PROPERTIES
-          LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
-          PREFIX ""
-          LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/debug
-          )
+    if( CMAKE_BUILD_TYPE STREQUAL "Debug")
+      add_library( GLideNHQd STATIC ${GLideNHQ_SOURCES})
+#          target_link_libraries( GLideNHQd PRIVATE png z ${Boost_LIBRARIES} )
+      target_link_libraries(GLideNHQd PRIVATE png z boost_system boost_filesystem boost_thread)
+    endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-        target_link_libraries(libGLideNHQd
-            #${OPENGL_LIBRARIES}
-            #${Boost_FILESYSTEM_LIBRARY}
-            #${Boost_SYSTEM_LIBRARY}
-            #${Boost_THREAD_LIBRARY}
-            pthread png z
-            ${Boost_LIBRARIES}
-        )
-        endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
-
-	if( CMAKE_BUILD_TYPE STREQUAL "Release")
-        add_library( libGLideNHQ STATIC ${GLideNHQ_SOURCES})
-
-        SET_TARGET_PROPERTIES(
-          libGLideNHQ
-          PROPERTIES
-          LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
-          PREFIX ""
-          LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-          )
-        target_link_libraries(libGLideNHQ
-            pthread png z
-            ${Boost_LIBRARIES}
-        )
-	endif( CMAKE_BUILD_TYPE STREQUAL "Release")
+    if( CMAKE_BUILD_TYPE STREQUAL "Release")
+      add_library( GLideNHQ STATIC ${GLideNHQ_SOURCES})
+#          target_link_libraries(libGLideNHQ pthread png z ${Boost_LIBRARIES} )
+      target_link_libraries(GLideNHQ PRIVATE png z boost_system boost_filesystem boost_thread)
+    endif( CMAKE_BUILD_TYPE STREQUAL "Release")
 else( NOT GHQCHK )
-	add_definitions(-DGHQCHK)
+    add_definitions(-DGHQCHK)
 
-	add_library( ghqchk SHARED ${GLideNHQ_SOURCES})
+    add_library( ghqchk SHARED ${GLideNHQ_SOURCES})
 
-	SET_TARGET_PROPERTIES(
-	  ghqchk
-	  PROPERTIES
-	  LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
-	  PREFIX ""
-	  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin
-	  )
+    SET_TARGET_PROPERTIES(
+      ghqchk
+      PROPERTIES
+      LINKER_LANGUAGE CXX # Or else we get an error message, because cmake can't figure out from the ".o"-suffix that it is a C-linker we need.
+      PREFIX ""
+      LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/plugin
+      )
 
-	if( CMAKE_BUILD_TYPE STREQUAL "Debug")
-        target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
-	endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if( CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
+    endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-	if( CMAKE_BUILD_TYPE STREQUAL "Release")
-	target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
-	endif( CMAKE_BUILD_TYPE STREQUAL "Release")
+    if( CMAKE_BUILD_TYPE STREQUAL "Release")
+    target_link_libraries(ghqchk ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} png z )
+    endif( CMAKE_BUILD_TYPE STREQUAL "Release")
 endif( NOT GHQCHK )
